--- a/Example/GoogleService-Info.plist
+++ b/Example/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>477864652079-73eb77jmqblkbqfsdh1ctbr9pkerk8p7.apps.googleusercontent.com</string>
+	<string>1089044593305-i921at60210gumhf7m43ah9a1lvdks3p.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.477864652079-73eb77jmqblkbqfsdh1ctbr9pkerk8p7</string>
+	<string>com.googleusercontent.apps.1089044593305-i921at60210gumhf7m43ah9a1lvdks3p</string>
 	<key>API_KEY</key>
-	<string>AIzaSyA6ezfQzbyZLiR1fNdPK8Mf-a7mfcsjUsA</string>
+	<string>AIzaSyBFZRXpXfhOAGIUSwxyfKae7XXAPeDJZGA</string>
 	<key>GCM_SENDER_ID</key>
-	<string>477864652079</string>
+	<string>1089044593305</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>biz.microtronic.app.swiftui-RealTimeChatApp</string>
 	<key>PROJECT_ID</key>
-	<string>login-b7cc9</string>
+	<string>realtimechatapp-d6bf5</string>
 	<key>STORAGE_BUCKET</key>
-	<string>login-b7cc9.appspot.com</string>
+	<string>realtimechatapp-d6bf5.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:477864652079:ios:c70c9f58ec5e58cc7b05da</string>
-	<key>DATABASE_URL</key>
-	<string>https://login-b7cc9-default-rtdb.firebaseio.com</string>
+	<string>1:1089044593305:ios:79c389d5610594df7bd608</string>
 </dict>
 </plist>
