--- a/swiftui-RealTimeChatApp/swiftui-RealTimeChatApp/Info.plist
+++ b/swiftui-RealTimeChatApp/swiftui-RealTimeChatApp/Info.plist
@@ -59,8 +59,8 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
-	<string></string>
+	<string>Please allow access to take a profile picture</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string></string>
+	<string>Please allow access to select a photo for your profile.</string>
 </dict>
 </plist>
